# sementic-release-cicd-test

./: .releaserc.js  README.md  package.json  pyproject.toml
.github/workflows/: release.yaml
src/sementic_release_test/: version.py
